update navbar to maintain overlay across all device sizes

--- a/about.html
+++ b/about.html
@@ -106,10 +106,25 @@
     </section>
     
 
-    <section class="press">
-        <h2>Press and Testimonials</h2>
-        <p>Welcome to the 8Figure Experience Family! 8Figure is an international full service entertainment company founded by Nigerian American Superstar Fatai William As a recording label and full-service organization the company supports adiverse roster of talent via label services,artist management, music publishing, production, Film, touring, strategic brand development, merchandising and more. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium suscipit, molestiae repudiandae veritatis doloremque iusto sint officiis blanditiis neque nesciunt animi ex sunt aut doloribus in voluptas ipsa laudantium cum.lorem</p>
-    </section>
+    <!-- Press Releases Section -->
+<section id="press-releases" class="press-releases">
+    <div class="container">
+        <h2 class="section-title">Press Releases</h2>
+        <div class="press-release">
+            <h3 class="release-title">Afro Beats Artist Fatai William Releases "Japata"</h3>
+            <p class="release-date">DENVER, Colo.</p>
+            <p class="release-summary">Born in Lagos, Nigeria, Fatai William tells a tale of love, emotion, and loss with his latest single "Japata." Afro Beats is the sound of his home continent, a musical expression from his heart. Japata is a sexually-charged song about a euphoric yet fleeting relationship.</p>
+            <a href="https://www.upcoming100.com/interview-detail/548/Aspiring-Afro-Beats-Artist-Fatai-William-Releases-Sexually-Charged-Single-Japata/" class="read-more">Read more</a>
+        </div>
+        <div class="press-release">
+            <h3 class="release-title">Connecting with Fatai William</h3>
+            <p class="release-date">Interview Highlight</p>
+            <p class="release-summary">In an exclusive interview, Fatai William shares how his upbringing in Lagos shaped him, his passion for music and fashion, and his dreams of reaching the Grammys. Known for his unique voice and style, he continues to make significant strides in the entertainment industry.</p>
+            <a href="https://shoutoutcolorado.com/meet-fatai-william-artist/" class="read-more">Read more</a>
+        </div>
+    </div>
+</section>
+
 
     <footer>
         <h2>Connect with Me</h2>
