--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
       
     </Section>
     <section id="welcome">
+        <div class="button"><a href="about.html"></a>About and More</div>
         <div class="image1">
             <img src="images/FataiImage1.jpg" alt="">
         </div>
         <br>
         <div class="music">
-            <h2>Featured Music</h2>
+           <div class="button"><a href="music.html"></a>Music</div>
             <!--p>Discover beats that resonate and melodies that inspire. Dive into the soundscapes of 8Figure Music! </p--> 
             <br>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3qEkIPqShQZl3onm6eQwQH?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -102,7 +103,7 @@
         </div> 
         <br>
         <div class="merch">
-            <h2>Official Merchandise</h2>
+            <div class="button"><a href="#"></a>Merchandise Store</div>
         <img src="images/freepik-export-20240509133423px4Z.jpeg" alt="">
         </div>
     </section>
