--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div> 
         <br>
         <div class="merch">
-            <div class="button"><a href="#"></a>Merchandise Store</div>
+            <div class="button"><a href="#"></a>Merchandise</div>
         <img src="images/freepik-export-20240509133423px4Z.jpeg" alt="">
         </div>
     </section>
