--- a/index.html
+++ b/index.html
@@ -92,6 +92,35 @@
             <img src="images/FataiImage1.jpg" alt="">
         </div>
         <br>
+        <section id="events-preview">
+            <div class="container">
+                <h2>Upcoming Events</h2>
+                <div class="events-grid">
+                    <div class="event-preview" style="background-image: url('images/live-concert.jpg');">
+                        <div class="event-info">
+                            <h3>Live Concert</h3>
+                            <p class="event-date">July 20, 2024</p>
+                            <a href="tickets.html" class="event-button">Get Tickets</a>
+                        </div>
+                    </div>
+                    <div class="event-preview" style="background-image: url('images/album-release.jpg');">
+                        <div class="event-info">
+                            <h3>Album Release Party</h3>
+                            <p class="event-date">August 15, 2024</p>
+                            <a href="notify.html" class="event-button">Be Notified</a>
+                        </div>
+                    </div>
+                    <div class="event-preview" style="background-image: url('images/meet-greet.jpg');">
+                        <div class="event-info">
+                            <h3>Meet and Greet Session</h3>
+                            <p class="event-date">September 10, 2024</p>
+                            <a href="rsvp.html" class="event-button">RSVP</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <div class="music">
            <div class="button"><a href="music.html"></a>Music</div>
             <!--p>Discover beats that resonate and melodies that inspire. Dive into the soundscapes of 8Figure Music! </p--> 
