--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
                 </div>
             </div>
         </section>
-        
+
+    <section>
         <div class="music">
+            
            <div class="button"><a href="music.html"></a>Music</div>
             <!--p>Discover beats that resonate and melodies that inspire. Dive into the soundscapes of 8Figure Music! </p--> 
             <br>
