new updates to the music sample

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div class="image1">
             <img src="images/FataiImage1.jpg" alt="">
         </div>
+    </section>
         <br>
         <section id="events-preview">
             <div class="container">
@@ -127,8 +128,8 @@
            <div class="button"><a href="music.html"></a>Music</div>
             <!--p>Discover beats that resonate and melodies that inspire. Dive into the soundscapes of 8Figure Music! </p--> 
             <br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3qEkIPqShQZl3onm6eQwQH?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <br>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5ZNbYXbJjfIHduWR72QP6n?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <br>
         <!--button class="sample-music">Explore Fatai's Music!</button-->
         
         </div> 
