--- a/about.html
+++ b/about.html
@@ -9,11 +9,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="about-page">
+    <div class="about-navbar">
+        <nav>
+            <div class="logo">
+                <img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt="8 Figure Logo">
+            </div>
+            <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
+            <ul class="mainMenu" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <div class="closeMenu"><i class="fa fa-times"></i></div>
+            </ul>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
+                <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+                <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a>
+            </div>
+        </nav>
+
+    </div>
+    
     <header>
         <div class="hero-container">
             <img src="images/ColdSummer-8Figure-445.jpg" alt="Artist Image" class="hero-image">
             <div class="hero-text">
-                <h1>Voices that resonate, lyrics that last.</h1>
             </div>
         </div>
     </header>
