updated background image, added two images to merch section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="music-text">
             <h3>Elevate Your Soul Through Music</h3>
             <p>Welcome to 8Figure Music! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. Explore and enjoy the diverse music we offer!</p>
-            <button class="action-btn2">All Music</button>
+        <a href="https://linktr.ee/fataiwilliam"><button class="action-btn2">All Music</button></a>
 
 
         </div>
@@ -120,9 +120,19 @@
         <source src="images/8figure MErch (3).mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    
-    
 </div>
+ <div class="merch-item">
+                <img src="images/freepik-export-20240509133423px4Z.jpeg" alt="Merch Item 3">
+                <h3>Hoodies</h3>
+                <p>Description of item 3</p>
+            </div>
+            <div class="merch-item">
+                <img src="images/pexels-melvin-buezo-1253763-2529157.jpg" alt="Merch Item 4">
+                <h3>Custom Nike Sneakers</h3>
+                <p>Description of item 4</p>
+            </div>
+        </div>
+        <button class="shop-btn">Shop Now</button>
 <!--<div class="merch-image">
     <img  src="images/freepik-export-20240509133423px4Z.jpeg" alt="">
 
