--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0p3SM6xEMnXdnN0gxcQ1lc?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         
         <div class="music-text">
-            <h3>Elevate Your Soul Through Music</h3>
+            <h3>Elevate Your Soul Through Music!</h3>
             <p>Welcome to 8Figure Music! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. Explore and enjoy the diverse music we offer!</p>
         <a href="https://linktr.ee/fataiwilliam"><button class="action-btn2">All Music</button></a>
 
@@ -121,16 +121,17 @@
         Your browser does not support the video tag.
     </video>
 </div>
+<div class="merch-item">
+    <img src="images/pexels-melvin-buezo-1253763-2529157.jpg" alt="Merch Item 4">
+    <h3>Custom Nike Sneakers</h3>
+    <p>Bold, Unique, Stylish!</p>
+</div>
  <div class="merch-item">
                 <img src="images/freepik-export-20240509133423px4Z.jpeg" alt="Merch Item 3">
                 <h3>Hoodies</h3>
-                <p>Description of item 3</p>
+                <p>Cozy, Modern, Versatile!</p>
             </div>
-            <div class="merch-item">
-                <img src="images/pexels-melvin-buezo-1253763-2529157.jpg" alt="Merch Item 4">
-                <h3>Custom Nike Sneakers</h3>
-                <p>Description of item 4</p>
-            </div>
+            
         </div>
         <button class="shop-btn">Shop Now</button>
 <!--<div class="merch-image">
