changed the events section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,47 @@
         </div>
     </section> -->
         <br>
-    <section id="events-preview">
+        <section id="events-preview">
+            <div class="container">
+                <h2 class="section-title">Upcoming Events</h2>
+                <div class="events-grid">
+                    <div class="event-preview" style="background-image: url('images/event1.jpg');">
+                        <div class="event-info">
+                            <h3>Listening Party</h3>
+                            <p class="event-date">Date: July 15, 2024</p>
+                            <p class="event-location">Location: City Hall</p>
+                            <a href="#" class="event-button">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="event-preview" style="background-image: url('images/event2.jpg');">
+                        <div class="event-info">
+                            <h3>EP Release</h3>
+                            <p class="event-date">Date: August 20, 2024</p>
+                            <p class="event-location">Location: Downtown Denver</p>
+                            <a href="#" class="event-button">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="event-preview" style="background-image: url('images/event3.jpg');">
+                        <div class="event-info">
+                            <h3>8Figure Fashion Show</h3>
+                            <p class="event-date">Date: September 10, 2024</p>
+                            <p class="event-location">Location: Central Park</p>
+                            <a href="#" class="event-button">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="event-preview" style="background-image: url('images/event4.jpg');">
+                        <div class="event-info">
+                            <h3>Local Concert</h3>
+                            <p class="event-date">Date: October 5, 2024</p>
+                            <p class="event-location">Location: Stadium</p>
+                            <a href="#" class="event-button">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+    <!--<section id="events-preview">
             <div class="container">
                 <h2>Upcoming Events</h2>
                 <div class="events-grid">
@@ -203,7 +243,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
        
        <!-- section-- id="Videos">
@@ -229,14 +269,14 @@
                     <li><a href="events.html">Gallery</a></li>
                 </ul>
             </div>
-            <div class="footer-social">
+            <!--<div class="footer-social">
                 <h4>Follow Us</h4>
                 <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
                 <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify">
                   <i class="fab fa-spotify"></i>
                 </a>
                 <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a> 
-            </div>
+            </div>-->
             <div class="footer-section">
                 <h4>Subscribe to our newsletter</h4>
                 <form action="subscribe.php" method="post">
