updated About page

--- a/about.html
+++ b/about.html
@@ -9,38 +9,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="about-page">
-    <div class="about-navbar">
-        <nav>
-            <div class="logo">
-                <img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt="8 Figure Logo">
-            </div>
-            <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
-            <ul class="mainMenu" id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <div class="closeMenu"><i class="fa fa-times"></i></div>
-            </ul>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
-                <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
-                <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a>
-            </div>
-        </nav>
-
+    <nav>
+        <div class="logo">
+            <img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt="8 Figure Logo">
+        </div>
+        <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
+        <ul class="mainMenu" id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
+        </ul>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
+            <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+            <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a>
+        </div>
+    </nav>
     </div>
     
     <header>
         <div class="hero-container">
             <img src="images/ColdSummer-8Figure-445.jpg" alt="Artist Image" class="hero-image">
-            <div class="hero-text">
-            </div>
         </div>
     </header>
 
     <section class="biography">
-        <h2>Biography</h2>
+        <div class="glitch-con">
+            <div class="glitch" data-text="Biography">
+                <h2 class="section-title">Biography</h2>
+            </div>
+        </div>
         <p>Welcome to the 8Figure Experience Family! 8Figure is an international full service entertainment company founded by Nigerian American Superstar Fatai William As a recording label and full-service organization the company supports adiverse roster of talent via label services,artist management, music publishing, production, Film, touring, strategic brand development, merchandising and more. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium suscipit, molestiae repudiandae veritatis doloremque iusto sint officiis blanditiis neque nesciunt animi ex sunt aut doloribus in voluptas ipsa laudantium cum.lorem</p>
     </section>
 
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section id="gallery" class="gallery-section">
+    <!--<section id="gallery" class="gallery-section">
         <h2 class="gallery-title">Gallery</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
@@ -106,10 +106,9 @@
             <div class="gallery-item">
                 <img src="images/FataiImage1.jpg" alt="Description of image 4">
             </div>
-            <!-- Add more items as needed -->
         </div>
-    </section>
-    <section id="discovery" class="discovery-section">
+    </section>-->
+    <!--<section id="discovery" class="discovery-section">
         <h2 class="discovery-title">My Journey</h2>
         <p class="discovery-text">
             Born and raised in the vibrant cultural landscapes of Nigeria, I found my voice amidst the echoes of traditional African beats and the bustling city life. Music was not just a passion; it was a personal revelation. From humming to local tunes as a child to crafting my own melodies in the streets of Lagos, my journey began long before I set foot on American soil.
@@ -120,8 +119,7 @@
         <p class="discovery-text">
             Self-taught and self-driven, my musical voyage is a testament to the power of persistence and the endless possibilities that open up when you dare to follow your dreams, no matter where you are in the world.
         </p>
-    </section>
-    <!-- Press Releases Section -->
+    </section>-->
 <section id="press-releases" class="press-releases">
     <div class="container">
         <h2 class="section-title">Press Releases</h2>
