--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="events-grid">
                     <div class="event-preview" style="background-image: url('images/event1.jpg');">
                         <div class="event-info">
-                            <h3>Listening Party</h3>
+                            <h3>Event Title 1</h3>
                             <p class="event-date">Date: July 15, 2024</p>
                             <p class="event-location">Location: City Hall</p>
                             <a href="#" class="event-button">Learn More</a>
