--- a/music.html
+++ b/music.html
@@ -10,23 +10,22 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt=""></a></div>
-        <div class="openMenu"><i class="fa fa-bars"></i></div>
-        <ul class="mainMenu">
+        <div class="logo">
+            <img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt="8 Figure Logo">
+        </div>
+        <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
+        <ul class="mainMenu" id="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Music.html">Music</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="#contact">Contact</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
-            <span class="icons">
-                
-                <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
-                <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify">
-                  <i class="fab fa-spotify"></i>
-                </a>
-                <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a>
-            </span>
         </ul>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/fataiwilliam/"><i class="fab fa-instagram"></i></a>
+            <a href="https://open.spotify.com/artist/3qEkIPqShQZl3onm6eQwQH?si=Y4eeMEcQRDyzdEx_ZM0leg" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+            <a href="http://www.youtube.com/@fataiwilliam"><i class="fab fa-youtube"></i></a>
+        </div>
     </nav>
 
     <section>
