new navbar to music page,updated website nav links added background video to music page, change gallery image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu" id="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <!--<li><a href="#">About</a></li>-->
             <li><a href="music.html">Music</a></li>
             <li><a href="#contact">Contact</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
@@ -160,7 +160,7 @@
         </div>
         
         <div class="gallery-item">
-            <img src="images/pexels-papa-yaw-956993-2531728.jpg" alt="Image 4">
+            <img src="images/pexels-wesleydavi-3778702.jpg" alt="Image 4">
         </div>
         <!-- Add more gallery items as needed -->
     </div>
