resized music secction image, cleaned up code and fixed the glitch effect error

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
             <a href="https://ampl.ink/Y4RrE" target="_blank">LISTEN NOW</a>
         </div>
         <div class="merch-text">
-            <h3>Feel The Rhythm!</h3>
+            <h2>Feel The Rhythm</h2>
             <p>Welcome to 8Figure Music! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
-            <a href="https://linktr.ee/fataiwilliam"><button class="action-btn2">All Music</button></a>
+            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">All Music</button></a>
         </div>
     </div>
     
@@ -118,8 +118,8 @@
         <div class="merch-text">
             <h2> Explore Our Collection</h2>
             <p>Dive into the world of unique and stylish merchandise. From custom apparel to limited edition accessories, our store offers something for everyone</p>
-            <button class="shop-btn">Shop Now</button>
-
+            <a href="coming-soon.html"><button class="shop-btn">Shop Now</button></a>
+            </a>
         </div>
         <!--<div class="merch-image">
             <img src="images/freepik-export-20240509133423px4Z.jpeg" alt="">
@@ -142,7 +142,7 @@
         <br>
         <div class="gallery-container">
             <div class="gallery-item">
-                <a href="artist-profile-link1.html">
+                <a href="https://linktr.ee/fataiwilliam">
                     <img src="images/FataiImage1.jpg" alt="Fatai William">
                     <h3>Fatai William</h3>
                 </a>
@@ -184,8 +184,10 @@
     </section> -->
         <br>
         <section id="events-preview">
+            
+                    <h2 class="section-title"> Upcoming Events</h2>
+            </div>
             <div class="container">
-                <h2 class="section-title">Upcoming Events</h2>
                 <div class="events-grid">
                     <div class="event-preview" style="background-image: url('images/event1.jpg');">
                         <div class="event-info">
@@ -265,7 +267,7 @@
    
         <section id="contact">
             <div class="contact-container">
-                <h2 class="section-title">Contact Us</h2>
+                <h2 class="contact-title">Contact Us</h2>
                 <div class="contact-content">
                     <div class="contact-details">
                         <h3>Get in Touch</h3>
@@ -273,7 +275,7 @@
                         <ul>
                             <li><i class="fas fa-map-marker-alt"></i> 8Figure llc., Denver, CO</li>
                             <li><i class="fas fa-phone-alt"></i> (720) 347-3378</li>
-                            <li><i class="fas fa-envelope"></i> contact@8figure.com</li>
+                            <li><i class="fas fa-envelope"></i> Fataiwale21@gmail.com</li>
                         </ul>
                     </div>
                     <form class="contact-form">
