added correct link to music preview img

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/music-background.jpg') center center / cover no-repeat;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/freepik-export-20240509133423px4Z.jpeg') center center / cover no-repeat;
             color: white;
             text-align: center;
         }
