--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="music-grid">
         <div class="music-item">
-            <a href="https://ampl.ink/Y4RrE" target="_blank">
+            <a href="https://ampl.ink/NG8BB" target="_blank">
                 <img src="images/Japata-cover.png" alt="Cover 1">
             </a>
             <a href="https://ampl.ink/Y4RrE" target="_blank">LISTEN NOW</a>
