added a singles music section

--- a/music.html
+++ b/music.html
@@ -30,13 +30,45 @@
 
     <main>
 
-    <div class="music-section">
-        <div class="glitch-con">
-            <div class="glitch" data-text="Featured Albums">
-                <h2 class="section-title">Featured Albums</h2>
+        <section id="music-main1" class="music-main1">
+            <div class="glitch-con">
+                <div class="glitch" data-text="Music">
+                    <h2 class="section-title">Music</h2>
+                </div>
             </div>
-    </div>
-    
+            <div class="music-grid1">
+                <div class="music-item1">
+                    <a href="https://ampl.ink/Y4RrE" target="_blank">
+                        <img src="images/baddest-cover.png" alt="Cover 1">
+                    </a>
+                    <p>BADDEST ft. ZaNurty</p>
+                    <a href="https://ampl.ink/Y4RrE" target="_blank" class="listen-now1">LISTEN NOW</a>
+                </div>
+                <div class="music-item1">
+                    <a href="https://ampl.ink/NG8BB" target="_blank">
+                        <img src="images/Japata-cover.png" alt="Cover 2">
+                    </a>
+                    <p>JAPATA</p>
+                    <a href="https://ampl.ink/NG8BB" target="_blank" class="listen-now1">LISTEN NOW</a>
+                </div>
+                <div class="music-item1">
+                    <a href="https://ampl.ink/prkaG" target="_blank">
+                        <img src="images/Script-from-Ago.png" alt="Cover 3">
+                    </a>
+                    <p>SCRIPT FROM AGO</p>
+                    <a href="https://ampl.ink/prkaG" target="_blank" class="listen-now1">LISTEN NOW</a>
+                </div>
+                <div class="music-item1">
+                    <a href="https://ampl.ink/eEXNO" target="_blank">
+                        <img src="images/love-to-your-body-cover.png" alt="Cover 4">
+                    </a>
+                    <p>LOVE TO YOUR BODY</p>
+                    <a href="https://ampl.ink/eEXNO" target="_blank" class="listen-now1">LISTEN NOW</a>
+                </div>
+            </div>
+        </section>
+        
+
         <div class="albums">
             <!-- Spotify Embed for Album 1 -->
             <div class="album">
