--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-
+<body>
     <nav>
         <div class="logo">
             <img src="images/8 Figure_2nd Alternative Logo Vertical (Full).png" alt="8 Figure Logo">
@@ -94,7 +94,7 @@
             <a href="https://ampl.ink/NG8BB" target="_blank">
                 <img src="images/Japata-cover.png" alt="Cover 1">
             </a>
-            <a href="https://ampl.ink/Y4RrE" target="_blank">LISTEN NOW</a>
+            <a href="https://ampl.ink/NG8BB" target="_blank">LISTEN NOW</a>
         </div>
         <div class="merch-text">
             <h2>Feel The Rhythm</h2>
