--- a/music.html
+++ b/music.html
@@ -72,12 +72,24 @@
         <div class="albums">
             <!-- Spotify Embed for Album 1 -->
             <div class="album">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/044gj94NbvYCMz93OEkL4v?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3mOmN8pMdj0Dw2TqbIavG7?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
             <!-- Spotify Embed for Album 2 -->
             <div class="album">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5C51uWGIhklMGyXWedKCrE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1W4EbwFhE4DflAgJxhXath?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
+            <div class="album">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0p3SM6xEMnXdnN0gxcQ1lc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="album">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6lXdVoOqU8ZBGVN0o93yIB?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+                <div class="album">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/09MefMjj8uuG931v1bJ81F?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="album">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0xRLrtU6tdM9PYzD64VvSe?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
     </div>
         <!--<h2>Latest Singles</h2>
         <div class="singles">
@@ -110,8 +122,12 @@
     </section>-->
 
 <section>
+    <div class="glitch-con">
+        <div class="glitch" data-text="Videos">
+            <h2 class="section-title">Videos</h2>
+        </div>
+    </div>
     <div class="music-video-section">
-        <h2>Music Videos</h2>
         <div class="videos">
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/TqZQOqqexv0?si=xluYjevyXoFhNUd5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
