--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
         <ul class="mainMenu" id="nav-links">
             <li><a href="index.html">Home</a></li>
             <!--<li><a href="#">About</a></li>-->
-            <li><a href="music.html">Music</a></li>
+            <li><a href="#">Music</a></li>
             <li><a href="#contact">Contact</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
         </ul>
@@ -162,7 +162,7 @@
             <h4>Quick Links</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="music.html">Music</a></li>
+                <li><a href="#">Music</a></li>
                 <li><a href="#">Merch</a></li>
                 <!---<li><a href="gallery.html">Gallery</a></li> -->
                 <li><a href="#Gallery">Gallery</a></li>
