added shopify link to merch section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="openMenu" id="hamburger"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu" id="nav-links">
             <li><a href="index.html">Home</a></li>
-            <!--<li><a href="#">About</a></li>-->
+            <li><a href="https://8figuremerch.myshopify.com/">Merch</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="#contact">Contact</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
@@ -118,7 +118,7 @@
         <div class="merch-text">
             <h2> Explore Our Collection</h2>
             <p>Dive into the world of unique and stylish merchandise. From custom apparel to limited edition accessories, our store offers something for everyone</p>
-            <a href="coming-soon.html"><button class="shop-btn">Shop Now</button></a>
+            <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
             </a>
         </div>
         <!--<div class="merch-image">
