--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="mainMenu" id="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="https://8figuremerch.myshopify.com/">Merch</a></li>
-            <li><a href="music.html">Music</a></li>
+            <!--<li><a href="music">Music</a></li>-->
             <li><a href="#contact">Contact</a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
         </ul>
@@ -104,7 +104,7 @@
     </div>
     
 </section>
-br
+<br>
 
 <section id="merch-preview" class="merch-preview">
     <div class="glitch-con">
@@ -305,10 +305,10 @@ br
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Music</a></li>
-                    <li><a href="catering.html">Merch</a></li>
+                    <!--<li><a href="menu.html">Music</a></li>-->
+                    <li><a href="https://8figuremerch.myshopify.com/">Merch</a></li>
                     <!---<li><a href="gallery.html">Gallery</a></li> -->
-                    <li><a href="events.html">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <!--<div class="footer-social">
